--- a/collector/kernel/Dockerfile
+++ b/collector/kernel/Dockerfile
@@ -30,7 +30,7 @@ RUN if [ "$BUILD_TYPE" = "Debug" ]; then \
       install_packages bc cgdb gawk gdb gzip iputils-ping jq netcat-openbsd procps ripgrep vim valgrind; \
     fi
 
-COPY --from=copier /usr/src/kernels/4.18.0-372.49.1.el8_6.x86_64/ /usr/src
+COPY --from=copier /usr/src/kernels/4.18.0-372.49.1.el8_6.x86_64/ /usr/src/4.18.0-372.49.1.el8_6.x86_64
 COPY --from=copier /lib/modules/4.18.0-372.49.1.el8_6.x86_64/ /lib/modules/4.18.0-372.49.1.el8_6.x86_64
 
 ENTRYPOINT [ "/bin/bash" ]
